# EvoNDZ

./: .gitignore  CMakeLists.txt  Config.cmake.in  EvoNDZ.sln  README.md
EvoNDZ/: CMakeLists.txt  EvoNDZ.vcxproj  EvoNDZ.vcxproj.filters
EvoNDZ Test/: CMakeLists.txt  EvoNDZ Test.vcxproj  EvoNDZ Test.vcxproj.filters
EvoNDZ Test/source/: app.cpp
EvoNDZ Test/source/scene/: test_scene.h
EvoNDZ/cmake/: Lists.cmake
EvoNDZ/include/EvoNDZ/app/: application.h  window.h
EvoNDZ/include/EvoNDZ/data/: array.h  limited_stack.h  open_hash_table.h  open_map.h  open_set.h  property.h  util.h
EvoNDZ/include/EvoNDZ/functional/: function.h
EvoNDZ/include/EvoNDZ/graphics/: camera2d.h
EvoNDZ/include/EvoNDZ/graphics/opengl/: render_target.h
EvoNDZ/include/EvoNDZ/input/: input.h
EvoNDZ/include/EvoNDZ/math/: ball.h  box.h  concepts.h  figure.h  geometry.h  line.h  line_equation.h  math.h  matrix3.h  matrix4.h  ray.h  segment.h  traits.h  triangle.h  vector.h  vector2.h  vector3.h  vector4.h
EvoNDZ/include/EvoNDZ/meta/: assumption.h  macro.h  sstring.h  type_pack.h
EvoNDZ/include/EvoNDZ/util/: array.h  concepts.h  enum.h  integer.h  type_traits.h  util.h
EvoNDZ/lib/: imgui.cpp  pch.h
EvoNDZ/lib/app/: application.cpp  window.cpp
EvoNDZ/lib/content/: archive.cpp  content.cpp  loading.cpp  mesh.cpp  shader.cpp
EvoNDZ/lib/graphics/: batch.cpp
EvoNDZ/lib/graphics/opengl/: dynamic_vertex_buffer.cpp  index_buffer.cpp  index_type.cpp  parameters.cpp  render_target.cpp  rendering.cpp  state.cpp  technique.cpp  texture2d.cpp  vertex_array.cpp  vertex_buffer.cpp
EvoNDZ/lib/graphics/opengl/enum/: enum.cpp
EvoNDZ/lib/graphics/simple2d/: plain_color_2d_batch.cpp  renderer.cpp
EvoNDZ/lib/input/: input.cpp  key_names.cpp
EvoNDZ/lib/math/: math.cpp
EvoNDZ/lib/util/: util.cpp
zGlad/: zGlad.vcxproj  zGlad.vcxproj.filters
zGlad/src/: glad.c
